--- a/ncaa_womens_volleyball_regression_analysis.Rmd
+++ b/ncaa_womens_volleyball_regression_analysis.Rmd
@@ -21,39 +21,23 @@ womens_ncaa_volleyball <- read_csv("womens_ncaa_volleyball_20182019.csv")
 Looking at what response variables are normally distributed
 
 ```{r }
-
-womens_ncaa_volleyball <- womens_ncaa_volleyball %>% 
+# Creating 4 variables 
+women_volleyball <- womens_ncaa_volleyball %>% 
   mutate(errors_per_set = errors / s,
          attacks_per_set = total_attacks / s,
          G = w + l,
-         sets_per_game = s / G) 
-  
-  errors <- ggplot(womens_ncaa_volleyball) +
-  geom_histogram(aes(x = errors_per_set, y = ..density..), 
-                 center = 0.5,
-                  closed = "left",
-                   color = "white") +
-   stat_function(fun = dnorm, 
-                 color = "red",
-                 n = 666,
-                 args = list(mean = mean(womens_ncaa_volleyball$errors_per_set),
-                             sd = sd(womens_ncaa_volleyball$errors_per_set))) +
-   labs(title = "Checking Normality for Errors",
-        subtitle = "CMSA Regresion Project",
-        x = "Errors Per Set",
-        y = "Density",
-        caption = "Courtesy of the NCAA") +
- theme_bw() + 
- theme(plot.title = element_text(size = 17, hjust = 0.4),
-       axis.title = element_text(size = 15))
-   
-errors
+         sets_per_game = s / G) %>% 
+  rename("Win Percent" = win_pct,"Hit Percent" = hit_pct,"Aces per Set" = aces_per_set,"Sets per Game" = sets_per_game,
+"Digs Per Set" = digs_per_set,"Attacks per Set" = attacks_per_set,
+"Errors per Set" = errors_per_set, "Blocks per Set" = blocks_per_set,
+"Assists per Set" = assists_per_set, "Kills per Set" = kills_per_set) 
+  attach(women_volleyball)
+# ggpairs function to look at correlations between variables 
 library(GGally)
-ncol(womens_ncaa_volleyball)
-ggpairs(womens_ncaa_volleyball, columns = c("win_pct", "kills_per_set", "errors_per_set", "assists_per_set", "blocks_per_set","aces_per_set", "hit_pct",
-"attacks_per_set"))
+ggpairs(women_volleyball, columns = c("Aces per Set", "Digs Per Set", "Kills per Set", "Errors per Set", "Attacks per Set", "Hit Percent", "Win Percent", "Sets per Game", "Blocks per Set", "Assists per Set"))
+ggsave("pairsplot.png", height = 6, width = 8)
 
-
+# Checking normality 
 win_percentage <- ggplot(womens_ncaa_volleyball) +
   geom_histogram(aes(x = win_pct, y = ..density..),
                  center = 0.5, 
@@ -73,69 +57,59 @@ theme(plot.title = element_text(size = 17, hjust = 0.4),
       axis.title = element_text(size = 15))
   
 win_percentage 
+ggsave("Win_percentage_normality.png", height = 6, width = 8)
 
-hits <- ggplot(womens_ncaa_volleyball) +
-  geom_histogram(aes(x = hit_pct, y = ..density..),
-                 center = 0.5, 
-                 closed = "left",
-                 color = "White") + 
-  stat_function(fun = dnorm, 
-                color = "red",
-                n = 666,
-                args = list(mean = mean(womens_ncaa_volleyball$hit_pct), sd = sd(womens_ncaa_volleyball$hit_pct))) +  
-  labs(title = "Checking Normality for Hit Percentage",
-       subtitle = "CMSA Regression Project",
-       x = "Hit Percentage",
-       y = "Density",
-       caption = "Courtesy of the NCAA") +
-theme_bw() + 
-theme(plot.title = element_text(size = 17, hjust = 0.4),
-      axis.title = element_text(size = 15))
 
-hits
+# hierarchial clustering for variable correlation
+ncaa_volley <- select(women_volleyball, `Aces per Set`, `Digs Per Set`, `Kills per Set`, `Errors per Set`, `Attacks per Set`, `Hit Percent`, `Win Percent`, `Sets per Game`, `Blocks per Set`, `Assists per Set`)
 
-sets <- ggplot(womens_ncaa_volleyball) +
-  geom_histogram(aes(x = sets_per_game, y = ..density..),
-                 center = 0.5, 
-                 closed = "left",
-                 color = "White") + 
-  stat_function(fun = dnorm, 
-                color = "red",
-                n = 666,
-                args = list(mean = mean(womens_ncaa_volleyball$sets_per_game), sd = sd(womens_ncaa_volleyball$sets_per_game))) +  
-  labs(title = "Checking Normality for Sets per Game",
-       subtitle = "CMSA Regression Project",
-       x = "Sets per Game",
-       y = "Density",
-       caption = "Courtesy of the NCAA") +
-theme_bw() + 
-theme(plot.title = element_text(size = 17, hjust = 0.4),
-      axis.title = element_text(size = 15))
-sets
+exp_cor <- cor(ncaa_volley)
 
+dist_matrix <- 1 - abs(exp_cor)
+
+dist_matrix <- as.dist(dist_matrix)
+library(ggdendro)
+hcluster <- hclust(dist_matrix, "complete")
+ggdendrogram(hcluster, 
+             rotate = TRUE,
+             size = 2) + 
+  labs(title = "What Variables are Most Clustered Together?") +
+  theme(plot.title = element_text(size = 20, hjust = 0.4))
+ggsave("hclustVolley.png", height = 6, width = 8)
+
+# correlation matrix plot
+library(ggcorrplot)
+ggcorrplot(exp_cor,
+           hc.order = TRUE,
+           type = "lower",
+           lab = TRUE,
+           title = "What Variables Correlate Most?",
+           legend.title = "Correlation Coefficient") +
+  theme(plot.title = element_text(size = 20, hjust = 0.4))
+
+
+
+ggsave("corrplot.png", height = 6, width = 8)
 ```
 
 Model Analysis
 ```{r}
-v1 <- lm(win_pct ~ errors_per_set + assists_per_set + blocks_per_set, data = womens_ncaa_volleyball)
-summary(volleyball_lm1)
+# Linear models 
+attach(women_volleyball)
+v1 <- lm(`Win Percent` ~ `Hit Percent` + `Blocks per Set` + `Errors per Set`, data = women_volleyball)
 summary(v1)
-
-v2 <- lm(win_pct ~  blocks_per_set + kills_per_set, data = womens_ncaa_volleyball)
+v2 <- lm(`Win Percent` ~ `Assists per Set` + `Blocks per Set`+ `Errors per Set`, data = women_volleyball)
 summary(v2)
-
-v3 <- lm(win_pct ~ hit_pct + blocks_per_set, data = womens_ncaa_volleyball)
-summary(v3)
-
-v4 <- lm(win_pct ~ assists_per_set + blocks_per_set + errors_per_set + aces_per_set, data = womens_ncaa_volleyball)
+v3 <- lm(`Win Percent` ~ `Blocks per Set` + `Assists per Set`, data = women_volleyball)
+v4 <- lm(`Win Percent` ~ `Blocks per Set` + `Hit Percent`, data = women_volleyball)
 summary(v4)
-
-v5 <- lm(win_pct ~ hit_pct + blocks_per_set + aces_per_set, data = womens_ncaa_volleyball)
+v5 <- lm(`Win Percent` ~ `Hit Percent` + `Errors per Set`, data = women_volleyball)
 summary(v5)
-
-v6 <- lm(win_pct ~ kills_per_set + aces_per_set + blocks_per_set, data = womens_ncaa_volleyball)
+v6 <- lm(`Win Percent` ~ `Assists per Set` + `Errors per Set`, data = women_volleyball)
 summary(v6)
-
+V7 <-lm(`Win Percent` ~ `Kills per Set` + `Errors per Set`, data = women_volleyball)
+summary(V7)
+# diagnostic graphs
 library(ggfortify)
 library(car)
 diag1 <- autoplot(v1) + theme_bw()
@@ -144,7 +118,6 @@ diag3 <- autoplot(v3) + theme_bw()
 diag4 <- autoplot(v4) + theme_bw()
 diag5 <- autoplot(v5) + theme_bw()
 diag6 <- autoplot(v6) + theme_bw()
-
 diag1
 diag2
 diag3
@@ -153,12 +126,150 @@ diag5
 diag6
 
 
+
+# variance inflation factors for collinearity 
 vif(v1)
 vif(v2)
 vif(v3)
 vif(v4)
 vif(v5)
 vif(v6)
+
+# Look at the predicted values versus actual observed values for win pct based on each model 
+womens_ncaa_volleyball <- womens_ncaa_volleyball %>% 
+  mutate(preds = predict(v5),
+         preds2 = predict(v2))
+p1 <- ggplot(womens_ncaa_volleyball, aes(x = win_pct, y = preds)) + 
+  geom_point() + 
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed", color = "red") + 
+  geom_smooth(method = "loess")
+
+
+p2 <- ggplot(womens_ncaa_volleyball, aes(x = win_pct, y = preds2)) + 
+  geom_point() + 
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed", color = "red") + 
+  geom_smooth(method = "loess")
+
+
+p3 <- ggplot(womens_ncaa_volleyball, aes(x = win_pct, y = preds3)) + 
+  geom_point() + 
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed", color = "red") + 
+  geom_smooth(method = "loess")
+
+
+p4 <- ggplot(womens_ncaa_volleyball, aes(x = win_pct, y = preds4)) + 
+  geom_point() + 
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed", color = "red") + 
+  geom_smooth(method = "loess")
+p1
+p2
+p3
+p4
+
+# Cross Validation/ Holdout Analysis for MSE values
+
+volleyball_cv <- 
+  map_dfr(unique(womens_ncaa_volleyball$season),
+           function(season2){
+             test_data <- womens_ncaa_volleyball %>% 
+               filter(season == season2)
+             train_data <- womens_ncaa_volleyball %>% 
+               filter(season != season2)
+             
+             first_model <- lm(win_pct ~ errors_per_set + assists_per_set +  blocks_per_set, data = train_data)
+        
+             
+             tibble(test_pred_values = predict(first_model, newdata = test_data, type = "response"),
+             test_actual = test_data$win_pct,
+             test_season = season2)
+
+           })
+  
+volleyball_cv2 <-  map_dfr(unique(womens_ncaa_volleyball$season),
+           function(season2){
+             test_data <- womens_ncaa_volleyball %>% 
+               filter(season == season2)
+             train_data <- womens_ncaa_volleyball %>% 
+               filter(season != season2)
+             
+             second_model <- lm(win_pct ~ errors_per_set + assists_per_set, data = train_data)
+        
+             
+             tibble(test_pred_values = predict(second_model, newdata = test_data, type = "response"),
+             test_actual = test_data$win_pct,
+             test_season = season2)
+
+           })
+volleyball_cv3 <-  map_dfr(unique(womens_ncaa_volleyball$season),
+           function(season2){
+             test_data <- womens_ncaa_volleyball %>% 
+               filter(season == season2)
+             train_data <- womens_ncaa_volleyball %>% 
+               filter(season != season2)
+             
+             third_model <- lm(win_pct ~ assists_per_set +  blocks_per_set, data = train_data)
+        
+             
+             tibble(test_pred_values = predict(third_model, newdata = test_data, type = "response"),
+             test_actual = test_data$win_pct,
+             test_season = season2)
+
+           })
+volleyball_cv4 <-  map_dfr(unique(womens_ncaa_volleyball$season),
+           function(season2){
+             test_data <- womens_ncaa_volleyball %>% 
+               filter(season == season2)
+             train_data <- womens_ncaa_volleyball %>% 
+               filter(season != season2)
+             
+             fourth_model <- lm(win_pct ~ blocks_per_set + hit_pct, data = train_data)
+        
+             
+             tibble(test_pred_values = predict(fourth_model, newdata = test_data, type = "response"),
+             test_actual = test_data$win_pct,
+             test_season = season2)
+
+           })
+mse1 <- mean((volleyball_cv$test_pred_values - volleyball_cv$test_actual)^2)
+mse1
+mse2 <- mean((volleyball_cv2$test_pred_values - volleyball_cv2$test_actual)^2)
+mse2
+mse3 <- mean((volleyball_cv3$test_pred_values - volleyball_cv3$test_actual)^2)
+mse3
+mse4 <- mean((volleyball_cv4$test_pred_values - volleyball_cv4$test_actual)^2)
+mse4
+
+set.seed(2018)
+womens_ncaa_volleyball <- womens_ncaa_volleyball %>% 
+  mutate(test_fold = sample(rep(1:5, length.out = n())))
+get_cv_preds <- function(model_formula, data = womens_ncaa_volleyball){
+  map_dfr(unique(data$test_fold),
+  function(holdout){
+    test_data <- data %>% 
+      filter(test_fold == holdout)
+    train_data <- data %>% 
+      filter(test_fold != holdout)
+    
+    reg_model = lm(as.formula(model_formula), data = train_data)
+    
+    tibble(test_preds = predict(reg_model, newdata = test_data),
+           test_actual = test_data$win_pct,
+           test_fold = holdout)
+  })
+}
+first_model <- get_cv_preds("win_pct ~ errors_per_set + assists_per_set + blocks_per_set")
+second_model <- get_cv_preds("win_pct ~ errors_per_set + assists_per_set")
+third_model <- get_cv_preds("win_pct ~ blocks_per_set + assists_per_set")
+fourth_model <- get_cv_preds("win_pct ~ blocks_per_set + hit_pct")
+
+bind_rows(mutate(first_model, type = "Errors Blocks and Assists"),
+          mutate(second_model, type = "Errors and Assists"),
+          mutate(third_model, type = "Blocks and Assists"),
+          mutate(fourth_model, type = "Blocks and Hit percentage")) %>%
+  group_by(type) %>% 
+  summarize(mse = mean((test_actual - test_preds)^2)) %>% 
+  mutate(type = fct_reorder(type, mse)) %>% 
+  ggplot(aes(x = type, y = mse)) + geom_point() + coord_flip() + theme_bw()
 
 ```
 
